validar caracteres minimos de nombre de usuario y password
